--- a/ChampRecommender/Windows/MainWindow.xaml
+++ b/ChampRecommender/Windows/MainWindow.xaml
@@ -23,7 +23,8 @@
             Width="15" Margin="0,5,5,0"
             Background="#FFDC143C"
             BorderThickness="2"
-            Click="CloseWindow"
+            Click="ChangeContent"
+            Panel.ZIndex="100"
             >
             <Button.Resources>
                 <Style TargetType="Border">
@@ -31,14 +32,17 @@
                 </Style>
             </Button.Resources>
         </Button>
-        <TextBlock 
-            TextWrapping="Wrap"
-            Text="League of Legends" 
-            TextAlignment="Center"
-            VerticalAlignment="Center"
-            Foreground="White"
-            FontSize="45"
-            FontWeight="Bold"
-            FontFamily="Forte" Margin="0,0,0,230" />
+        <Grid>
+            <TextBlock 
+                TextWrapping="Wrap"
+                Text="League of Legends" 
+                TextAlignment="Center"
+                VerticalAlignment="Center"
+                Foreground="White"
+                FontSize="45"
+                FontWeight="Bold"
+                FontFamily="Forte" Margin="0,0,0,230" />
+        </Grid>
+        <Frame x:Name="MainContent" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
