--- a/ChampRecommender/Windows/MainWindow.xaml
+++ b/ChampRecommender/Windows/MainWindow.xaml
@@ -3,15 +3,16 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ChampRecommender.Windows"
+        xmlns:local="clr-namespace:ChampRecommender.Windows" xmlns:viewmodel="clr-namespace:ChampRecommender.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ClientViewModel}"
         mc:Ignorable="d"
         ResizeMode="NoResize"
         WindowStyle="None"
         Title="WWW" 
         Height="560"
         Width="400"
-        Loaded="ClassicGameOn"
-        MouseDown="Window_MouseDown">
+        Loaded="ClientOnCheck"
+        MouseDown="Window_MouseDown"
+        >
     <Window.Background>
         <ImageBrush ImageSource="/Windows/MSI23_Announcement_Header_57.png" Opacity="0.5"></ImageBrush>
     </Window.Background>
@@ -23,7 +24,7 @@
             Width="15" Margin="0,5,5,0"
             Background="#FFDC143C"
             BorderThickness="2"
-            Click="ChangeContent"
+            Click="CloseWindow"
             Panel.ZIndex="100"
             >
             <Button.Resources>
@@ -43,6 +44,8 @@
                 FontWeight="Bold"
                 FontFamily="Forte" Margin="0,0,0,230" />
         </Grid>
-        <Frame x:Name="MainContent" NavigationUIVisibility="Hidden"/>
+        <Frame x:Name="MainContent" NavigationUIVisibility="Hidden" 
+               Content="{Binding Path=champRecommend, UpdateSourceTrigger=PropertyChanged}" 
+               />
     </Grid>
 </Window>
