--- a/ChampRecommender/Windows/MainWindow.xaml
+++ b/ChampRecommender/Windows/MainWindow.xaml
@@ -45,7 +45,7 @@
                 FontFamily="Forte" Margin="0,0,0,230" />
         </Grid>
         <Frame x:Name="MainContent" NavigationUIVisibility="Hidden" 
-               Content="{Binding Path=champRecommend, UpdateSourceTrigger=PropertyChanged}" 
+               Content="{Binding Path=champRecommend, UpdateSourceTrigger=PropertyChanged}" Navigated="MainContent_Navigated" 
                />
     </Grid>
 </Window>
