--- a/ChampRecommender/Windows/ChampRecommend.xaml
+++ b/ChampRecommender/Windows/ChampRecommend.xaml
@@ -9,6 +9,9 @@
       Title="ChampRecommend">
 
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="{Binding champImage, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" /> 
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
             <RowDefinition Height="80"/>
@@ -69,7 +72,7 @@
         <StackPanel
             Grid.Row="5"
             Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Image Source="{Binding mostLaneImage, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" 
+            <Image x:Name="image" Source="{Binding mostLaneImage, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" 
                    Width="100" Height="100" 
                    HorizontalAlignment="Center" 
                    VerticalAlignment="Center" />
@@ -219,6 +222,7 @@
                 Foreground="FloralWhite" FontWeight="Heavy" FontSize="20"
                 VerticalAlignment="Center" HorizontalAlignment="Left" Margin="20,0,0,0"
                 />
+            <Button Click="communicateTest">click!</Button>
         </StackPanel>
     </Grid>
 </Page>
